Fix req bindings for book review route
