# api/docs/swagger.json
@@ -178,38 +178,7 @@
                 }
             }
         },
-        "/ratings": {
-            "post": {
-                "description": "Create a new rating for a book",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "ratings"
-                ],
-                "summary": "Create a new rating",
-                "parameters": [
-                    {
-                        "description": "Rating to create",
-                        "name": "rating",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/ratings.RatingRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created"
-                    }
-                }
-            }
-        },
-        "/reviews": {
+        "/books/{id}/reviews": {
             "get": {
                 "description": "Retrieve all reviews associated with a specific book",
                 "consumes": [
@@ -226,7 +195,7 @@
                     {
                         "type": "string",
                         "description": "Book ID",
-                        "name": "book_id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
@@ -263,6 +232,37 @@
                         "schema": {
                             "$ref": "#/definitions/response.ErrorResponse"
                         }
+                    }
+                }
+            }
+        },
+        "/ratings": {
+            "post": {
+                "description": "Create a new rating for a book",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ratings"
+                ],
+                "summary": "Create a new rating",
+                "parameters": [
+                    {
+                        "description": "Rating to create",
+                        "name": "rating",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/ratings.RatingRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
                     }
                 }
             }
